syntax = "proto3";

message Alert {
    string deviceId = 1;
    string lat = 2;
    string lng = 3;
    string timestamp = 4;
    string userId = 5;
    string description = 6;
    string vehicleId = 7;
    string vehicleDetails = 8;
}

message Rating {
    string deviceId = 1;
    string lat = 2;
    string lng = 3;
    string timestamp = 4;
    string userId = 5;
    string description = 6;
    string vehicleId = 7;
    string vehicleDetails = 8;
}